checker/tests/nullness/init/Uninit5.java
public class Uninit5 {
    // :: error: (initialization.field.uninitialized)
    String x;
}
